create MarioForm for other mario states inherit

--- a/04-Collision/04-Collision.vcxproj.filters
+++ b/04-Collision/04-Collision.vcxproj.filters
@@ -72,6 +72,9 @@
     <ClInclude Include="MarioSmall.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="MarioForm.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="debug.cpp">
@@ -123,6 +126,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="MarioSmall.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="MarioForm.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
