set up MarioBig from Mario

--- a/04-Collision/04-Collision.vcxproj
+++ b/04-Collision/04-Collision.vcxproj
@@ -139,6 +139,7 @@
     <ClInclude Include="Goomba.h" />
     <ClInclude Include="KeyEventHandler.h" />
     <ClInclude Include="Mario.h" />
+    <ClInclude Include="MarioBig.h" />
     <ClInclude Include="MarioForm.h" />
     <ClInclude Include="MarioSmall.h" />
     <ClInclude Include="Platform.h" />
@@ -159,6 +160,7 @@
     <ClCompile Include="Goomba.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Mario.cpp" />
+    <ClCompile Include="MarioBig.cpp" />
     <ClCompile Include="MarioForm.cpp" />
     <ClCompile Include="MarioSmall.cpp" />
     <ClCompile Include="Platform.cpp" />
