--- a/04-Collision/04-Collision.vcxproj
+++ b/04-Collision/04-Collision.vcxproj
@@ -141,6 +141,7 @@
     <ClInclude Include="Mario.h" />
     <ClInclude Include="MarioBig.h" />
     <ClInclude Include="MarioForm.h" />
+    <ClInclude Include="MarioRacoon.h" />
     <ClInclude Include="MarioSmall.h" />
     <ClInclude Include="Platform.h" />
     <ClInclude Include="SampleKeyEventHandler.h" />
@@ -162,6 +163,7 @@
     <ClCompile Include="Mario.cpp" />
     <ClCompile Include="MarioBig.cpp" />
     <ClCompile Include="MarioForm.cpp" />
+    <ClCompile Include="MarioRacoon.cpp" />
     <ClCompile Include="MarioSmall.cpp" />
     <ClCompile Include="Platform.cpp" />
     <ClCompile Include="SampleKeyEventHandler.cpp" />
