--- a/04-Collision/04-Collision.vcxproj.filters
+++ b/04-Collision/04-Collision.vcxproj.filters
@@ -78,6 +78,9 @@
     <ClInclude Include="MarioBig.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="MarioRacoon.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="debug.cpp">
@@ -135,6 +138,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="MarioBig.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="MarioRacoon.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
