Change brick to platform for simpler collision

--- a/04-Collision/04-Collision.vcxproj.filters
+++ b/04-Collision/04-Collision.vcxproj.filters
@@ -78,6 +78,12 @@
     <ClInclude Include="Paragoomba.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="FullPlatform.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Wall.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="debug.cpp">
@@ -135,6 +141,12 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Paragoomba.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="FullPlatform.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Wall.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
