--- a/04-Collision/04-Collision.vcxproj.filters
+++ b/04-Collision/04-Collision.vcxproj.filters
@@ -84,6 +84,9 @@
     <ClInclude Include="Wall.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Parakoopa.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="debug.cpp">
@@ -147,6 +150,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Wall.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Parakoopa.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
