Recreate Mario class

--- a/SuperMarioBros3/SuperMarioBros3.vcxproj
+++ b/SuperMarioBros3/SuperMarioBros3.vcxproj
@@ -158,6 +158,10 @@
     <ClCompile Include="Goomba.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Mario.cpp" />
+    <ClCompile Include="MarioBig.cpp" />
+    <ClCompile Include="MarioForm.cpp" />
+    <ClCompile Include="MarioRacoon.cpp" />
+    <ClCompile Include="MarioSmall.cpp" />
     <ClCompile Include="Platform.cpp" />
     <ClCompile Include="PlayScene.cpp" />
     <ClCompile Include="Portal.cpp" />
@@ -182,6 +186,10 @@
     <ClInclude Include="Goomba.h" />
     <ClInclude Include="KeyEventHandler.h" />
     <ClInclude Include="Mario.h" />
+    <ClInclude Include="MarioBig.h" />
+    <ClInclude Include="MarioForm.h" />
+    <ClInclude Include="MarioRacoon.h" />
+    <ClInclude Include="MarioSmall.h" />
     <ClInclude Include="Platform.h" />
     <ClInclude Include="PlayScene.h" />
     <ClInclude Include="Portal.h" />
