Add question block to scene005

--- a/SuperMarioBros3/SuperMarioBros3.vcxproj
+++ b/SuperMarioBros3/SuperMarioBros3.vcxproj
@@ -177,6 +177,7 @@
     <ClCompile Include="Platform.cpp" />
     <ClCompile Include="PlayScene.cpp" />
     <ClCompile Include="Portal.cpp" />
+    <ClCompile Include="QuestionBlock.cpp" />
     <ClCompile Include="RedKoopa.cpp" />
     <ClCompile Include="RedVenusFireTrap.cpp" />
     <ClCompile Include="SampleKeyEventHandler.cpp" />
@@ -223,6 +224,7 @@
     <ClInclude Include="Platform.h" />
     <ClInclude Include="PlayScene.h" />
     <ClInclude Include="Portal.h" />
+    <ClInclude Include="QuestionBlock.h" />
     <ClInclude Include="RedKoopa.h" />
     <ClInclude Include="RedVenusFireTrap.h" />
     <ClInclude Include="SampleKeyEventHandler.h" />
