--- a/SuperMarioBros3/SuperMarioBros3.vcxproj
+++ b/SuperMarioBros3/SuperMarioBros3.vcxproj
@@ -156,6 +156,7 @@
     <ClCompile Include="Collision.cpp" />
     <ClCompile Include="debug.cpp" />
     <ClCompile Include="Enemy.cpp" />
+    <ClCompile Include="FallCensor.cpp" />
     <ClCompile Include="FireBall.cpp" />
     <ClCompile Include="FullPlatform.cpp" />
     <ClCompile Include="Game.cpp" />
@@ -205,6 +206,7 @@
     <ClInclude Include="Collision.h" />
     <ClInclude Include="debug.h" />
     <ClInclude Include="Enemy.h" />
+    <ClInclude Include="FallCensor.h" />
     <ClInclude Include="FireBall.h" />
     <ClInclude Include="FullPlatform.h" />
     <ClInclude Include="Game.h" />
