--- a/SuperMarioBros3/SuperMarioBros3.vcxproj
+++ b/SuperMarioBros3/SuperMarioBros3.vcxproj
@@ -186,6 +186,7 @@
     <ClCompile Include="Sprites.cpp" />
     <ClCompile Include="SuperLeaf.cpp" />
     <ClCompile Include="SuperMushroom.cpp" />
+    <ClCompile Include="Tail.cpp" />
     <ClCompile Include="Textures.cpp" />
     <ClCompile Include="Tunnel.cpp" />
     <ClCompile Include="TunnelPlant.cpp" />
@@ -238,6 +239,7 @@
     <ClInclude Include="Sprites.h" />
     <ClInclude Include="SuperLeaf.h" />
     <ClInclude Include="SuperMushroom.h" />
+    <ClInclude Include="Tail.h" />
     <ClInclude Include="Texture.h" />
     <ClInclude Include="Textures.h" />
     <ClInclude Include="Tunnel.h" />
