--- a/SuperMarioBros3/SuperMarioBros3.vcxproj
+++ b/SuperMarioBros3/SuperMarioBros3.vcxproj
@@ -152,6 +152,7 @@
     <ClCompile Include="Background.cpp" />
     <ClCompile Include="Block.cpp" />
     <ClCompile Include="Brick.cpp" />
+    <ClCompile Include="BrokenBrick_Particle.cpp" />
     <ClCompile Include="Coin.cpp" />
     <ClCompile Include="Collision.cpp" />
     <ClCompile Include="debug.cpp" />
@@ -176,6 +177,7 @@
     <ClCompile Include="NoCollideWall.cpp" />
     <ClCompile Include="Paragoomba.cpp" />
     <ClCompile Include="Parakoopa.cpp" />
+    <ClCompile Include="Particle.cpp" />
     <ClCompile Include="PiranhaPlant.cpp" />
     <ClCompile Include="Plant.cpp" />
     <ClCompile Include="Platform.cpp" />
@@ -206,6 +208,7 @@
     <ClInclude Include="Background.h" />
     <ClInclude Include="Block.h" />
     <ClInclude Include="Brick.h" />
+    <ClInclude Include="BrokenBrick_Particle.h" />
     <ClInclude Include="Coin.h" />
     <ClInclude Include="Collision.h" />
     <ClInclude Include="debug.h" />
@@ -231,6 +234,7 @@
     <ClInclude Include="NoCollideWall.h" />
     <ClInclude Include="Paragoomba.h" />
     <ClInclude Include="Parakoopa.h" />
+    <ClInclude Include="Particle.h" />
     <ClInclude Include="PiranhaPlant.h" />
     <ClInclude Include="Plant.h" />
     <ClInclude Include="Platform.h" />
