--- a/SuperMarioBros3/SuperMarioBros3.vcxproj
+++ b/SuperMarioBros3/SuperMarioBros3.vcxproj
@@ -151,6 +151,7 @@
     <ClCompile Include="Animations.cpp" />
     <ClCompile Include="Background.cpp" />
     <ClCompile Include="Block.cpp" />
+    <ClCompile Include="BlueButton.cpp" />
     <ClCompile Include="Brick.cpp" />
     <ClCompile Include="BrokenBrick_Particle.cpp" />
     <ClCompile Include="Coin.cpp" />
@@ -207,6 +208,7 @@
     <ClInclude Include="AssetIDs.h" />
     <ClInclude Include="Background.h" />
     <ClInclude Include="Block.h" />
+    <ClInclude Include="BlueButton.h" />
     <ClInclude Include="Brick.h" />
     <ClInclude Include="BrokenBrick_Particle.h" />
     <ClInclude Include="Coin.h" />
