--- a/SuperMarioBros3/SuperMarioBros3.vcxproj.filters
+++ b/SuperMarioBros3/SuperMarioBros3.vcxproj.filters
@@ -177,6 +177,9 @@
     <ClCompile Include="BlueButton.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="OneUpMushroom.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Animation.h">
@@ -351,6 +354,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="BlueButton.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="OneUpMushroom.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
