--- a/SuperMarioBros3/SuperMarioBros3.vcxproj.filters
+++ b/SuperMarioBros3/SuperMarioBros3.vcxproj.filters
@@ -183,6 +183,9 @@
     <ClCompile Include="PosKey.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="RedParakoopa.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Animation.h">
@@ -363,6 +366,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="PosKey.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="RedParakoopa.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
