--- a/SuperMarioBros3/SuperMarioBros3.vcxproj.filters
+++ b/SuperMarioBros3/SuperMarioBros3.vcxproj.filters
@@ -189,6 +189,9 @@
     <ClCompile Include="GoldenNBrick.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="TimerUI.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Animation.h">
@@ -375,6 +378,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="GoldenNBrick.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="TimerUI.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
