--- a/SuperMarioBros3/SuperMarioBros3.vcxproj
+++ b/SuperMarioBros3/SuperMarioBros3.vcxproj
@@ -198,6 +198,7 @@
     <ClCompile Include="SuperMushroom.cpp" />
     <ClCompile Include="Tail.cpp" />
     <ClCompile Include="Textures.cpp" />
+    <ClCompile Include="TimerUI.cpp" />
     <ClCompile Include="Tunnel.cpp" />
     <ClCompile Include="TunnelPlant.cpp" />
     <ClCompile Include="Utils.cpp" />
@@ -262,6 +263,7 @@
     <ClInclude Include="Tail.h" />
     <ClInclude Include="Texture.h" />
     <ClInclude Include="Textures.h" />
+    <ClInclude Include="TimerUI.h" />
     <ClInclude Include="Tunnel.h" />
     <ClInclude Include="TunnelPlant.h" />
     <ClInclude Include="Utils.h" />
