--- a/SuperMarioBros3/SuperMarioBros3.vcxproj.filters
+++ b/SuperMarioBros3/SuperMarioBros3.vcxproj.filters
@@ -195,6 +195,9 @@
     <ClCompile Include="UIElement.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="CoinUI.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Animation.h">
@@ -387,6 +390,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="UIElement.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="CoinUI.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
