--- a/SuperMarioBros3/SuperMarioBros3.vcxproj
+++ b/SuperMarioBros3/SuperMarioBros3.vcxproj
@@ -155,6 +155,7 @@
     <ClCompile Include="Brick.cpp" />
     <ClCompile Include="BrokenBrick_Particle.cpp" />
     <ClCompile Include="Coin.cpp" />
+    <ClCompile Include="CoinUI.cpp" />
     <ClCompile Include="Collision.cpp" />
     <ClCompile Include="debug.cpp" />
     <ClCompile Include="Enemy.cpp" />
@@ -218,6 +219,7 @@
     <ClInclude Include="Brick.h" />
     <ClInclude Include="BrokenBrick_Particle.h" />
     <ClInclude Include="Coin.h" />
+    <ClInclude Include="CoinUI.h" />
     <ClInclude Include="Collision.h" />
     <ClInclude Include="debug.h" />
     <ClInclude Include="Enemy.h" />
