--- a/SuperMarioBros3/SuperMarioBros3.vcxproj
+++ b/SuperMarioBros3/SuperMarioBros3.vcxproj
@@ -159,6 +159,7 @@
     <ClCompile Include="Collision.cpp" />
     <ClCompile Include="debug.cpp" />
     <ClCompile Include="EffectManager.cpp" />
+    <ClCompile Include="EndingCard.cpp" />
     <ClCompile Include="Enemy.cpp" />
     <ClCompile Include="FallCensor.cpp" />
     <ClCompile Include="FireBall.cpp" />
@@ -229,6 +230,7 @@
     <ClInclude Include="Collision.h" />
     <ClInclude Include="debug.h" />
     <ClInclude Include="EffectManager.h" />
+    <ClInclude Include="EndingCard.h" />
     <ClInclude Include="Enemy.h" />
     <ClInclude Include="FallCensor.h" />
     <ClInclude Include="FireBall.h" />
