--- a/SuperMarioBros3/SuperMarioBros3.vcxproj.filters
+++ b/SuperMarioBros3/SuperMarioBros3.vcxproj.filters
@@ -216,6 +216,9 @@
     <ClCompile Include="EffectManager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="EndingCard.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Animation.h">
@@ -429,6 +432,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="EffectManager.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="EndingCard.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
