--- a/SuperMarioBros3/SuperMarioBros3.vcxproj
+++ b/SuperMarioBros3/SuperMarioBros3.vcxproj
@@ -152,6 +152,7 @@
     <ClCompile Include="Background.cpp" />
     <ClCompile Include="Block.cpp" />
     <ClCompile Include="BlueButton.cpp" />
+    <ClCompile Include="Boomerang.cpp" />
     <ClCompile Include="BoomerangBros.cpp" />
     <ClCompile Include="Brick.cpp" />
     <ClCompile Include="BrokenBrick_Particle.cpp" />
@@ -223,6 +224,7 @@
     <ClInclude Include="Background.h" />
     <ClInclude Include="Block.h" />
     <ClInclude Include="BlueButton.h" />
+    <ClInclude Include="Boomerang.h" />
     <ClInclude Include="BoomerangBros.h" />
     <ClInclude Include="Brick.h" />
     <ClInclude Include="BrokenBrick_Particle.h" />
