--- a/SuperMarioBros3/SuperMarioBros3.vcxproj
+++ b/SuperMarioBros3/SuperMarioBros3.vcxproj
@@ -154,6 +154,7 @@
     <ClCompile Include="BlueButton.cpp" />
     <ClCompile Include="Brick.cpp" />
     <ClCompile Include="BrokenBrick_Particle.cpp" />
+    <ClCompile Include="CardUI.cpp" />
     <ClCompile Include="Coin.cpp" />
     <ClCompile Include="CoinUI.cpp" />
     <ClCompile Include="Collision.cpp" />
@@ -225,6 +226,7 @@
     <ClInclude Include="BlueButton.h" />
     <ClInclude Include="Brick.h" />
     <ClInclude Include="BrokenBrick_Particle.h" />
+    <ClInclude Include="CardUI.h" />
     <ClInclude Include="Coin.h" />
     <ClInclude Include="CoinUI.h" />
     <ClInclude Include="Collision.h" />
