--- a/SuperMarioBros3/SuperMarioBros3.vcxproj
+++ b/SuperMarioBros3/SuperMarioBros3.vcxproj
@@ -159,6 +159,7 @@
     <ClCompile Include="Coin.cpp" />
     <ClCompile Include="CoinUI.cpp" />
     <ClCompile Include="Collision.cpp" />
+    <ClCompile Include="CThrowable.cpp" />
     <ClCompile Include="debug.cpp" />
     <ClCompile Include="EffectManager.cpp" />
     <ClCompile Include="Enemy.cpp" />
@@ -231,6 +232,7 @@
     <ClInclude Include="Coin.h" />
     <ClInclude Include="CoinUI.h" />
     <ClInclude Include="Collision.h" />
+    <ClInclude Include="CThrowable.h" />
     <ClInclude Include="debug.h" />
     <ClInclude Include="EffectManager.h" />
     <ClInclude Include="Enemy.h" />
